# CatalogKit

./: .gitignore  .importlinter  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clearmetric-architecture.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  cla.yml  protected-files.yml  publish.yml
docs/: adoption-gate.md  artifact-schema.md  backbone-lab.md  backbone-v2-roadmap.md  current-scope.md  development.md  e2e-readiness.md  future-roadmap-gated.md  index.md  limitations.md  lineage-contract-validation.md  lineage-step0.md  modules_instruction.md  orchestration.md  public-architecture.md  release_checklist.md  roadmap.md  status.md  uncertainty.md  v1-boundary.md  vision.md
docs/concepts/: canonical-graph.md  canonical-ids.md  derived-state.md
docs/getting-started/: five-minute-demo.md  install.md  outputs.md  your-project.md
docs/reference/: io-formats.md
docs/validation/: check-lineage.md  help-test.md  sql-limits.md  what-works.md
examples/backbone-lab/: README.md  (+1 more)
scripts/: generate_notebooks.py
spec/: catalog-artifact.schema.json  clearmetric-project.schema.json  impact-output.schema.json
sql_map/: __init__.py  __main__.py  api.py  ast_utils.py  build.py  cli.py  ctes.py  errors.py  models.py  parser.py  relations.py
tests/: test_backbone_lab_boundaries.py  test_cli.py  test_contract.py  test_cross_package_artifacts.py  test_ctes.py  test_errors.py  test_import_boundary.py  test_module_independence.py  test_relations.py  test_render_json.py  test_repository_boundaries.py  test_statement_support.py
(+47 files in other folders)
