[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-map"
dynamic = ["version"]
description = "Map one SQL statement into deterministic relation dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "ClearMetric Labs"},
]
keywords = [
    "sql",
    "lineage",
    "dependencies",
    "ctes",
    "sqlglot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.10.0",
    "sqlglot>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
release = [
    "build>=1.2.2",
    "twine>=5.1.1",
]

[project.scripts]
sql-map = "sql_map.cli:main"

[project.urls]
Homepage = "https://github.com/Clearmetric-Labs/sql-map"
Source = "https://github.com/Clearmetric-Labs/sql-map"
Issues = "https://github.com/Clearmetric-Labs/sql-map/issues"

[tool.setuptools.dynamic]
version = {attr = "sql_map._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["sql_map*"]
